Add metadata files needed to build jdk.jfr module
Backport of https://github.com/ibmruntimes/openj9-openjdk-jdk/pull/833

Signed-off-by: Gengchen Tuo <gengchen.tuo@ibm.com>

--- a/.copyrightignore
+++ b/.copyrightignore
@@ -32,6 +32,8 @@
 # ===========================================================================
 
 /src/bsd/doc/
+/src/hotspot/share/jfr/metadata/metadata.xml
+/src/hotspot/share/jfr/metadata/metadata.xsd
 /src/jdk.crypto.ec/share/native/libsunec/impl/
 /src/linux/doc/
 /src/solaris/doc/
